--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -11,3 +11,13 @@
 .button {
   @include button;
 }
+.backButton {
+  @include button;
+  background-color: $white;
+  color: black;
+  border: 1px solid black;
+  &:hover {
+    background-color: black;
+    color: $white;
+  }
+}
