--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -9,13 +9,11 @@
   z-index: 1000;
   width: 100%;
   background-color: $blue;
-  &.visible {
-    box-shadow: 0 4px 18px 0px rgba(61, 97, 150, 0.12),
-      0 7px 10px -5px rgba(95, 100, 136, 0.15);
-  }
+  box-shadow: 0 4px 18px 0px rgba(61, 97, 150, 0.12),
+    0 7px 10px -5px rgba(95, 100, 136, 0.15);
   position: fixed;
   top: 0;
-  &.white {
+  &.unfix {
     background-color: $white;
   }
   @media (min-width: 1200px) {
