--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,7 +6,13 @@
   align-items: center;
   width: 100%;
 }
-
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 200px;
+}
 @media (max-width: 600px) {
   .grid {
     width: 100%;
