--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,37 +5,38 @@ $mediumFont: 40px;
 $smallFont: 20px;
 $navy: #00001a;
 $blue: #96c7dc;
+$xs: 10px;
 $sm: 16px;
 $md: 26px;
 $lg: 32px;
+$xl: 32px;
+$xxl: 42px;
 
 @mixin input {
   border: none;
   border-bottom: 1px solid #000000;
   background-color: #ffff;
   width: 340px;
-  height: 50px;
-  margin: $sm 0 !important;
+  margin: $xs 0 !important;
+  box-shadow: 0 4px 18px 0px rgba(177, 191, 212, 0.12),
+    0 3px 4px -2px rgba(175, 177, 199, 0.15);
 }
 @mixin button {
   background-color: #000000;
-  border-radius: 1px;
+  border-radius: 3px;
   color: white;
   font-family: Fjalla One, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 14px;
-  font-weight: 700;
+  font-size: $sm;
   border: none;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.15em;
   text-align: center;
-  display: inline-block;
   align-self: center;
-  position: relative;
   width: 100px;
-  height: 3em;
-  margin: 2em auto;
+  height: $xxl;
+  margin: $sm;
 
   &:hover {
     background-color: #ffffff;
