--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -4,15 +4,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 90%;
+  @media (min-width: 600px) {
+    align-items: flex-start;
+  }
 }
 .input {
+  @include fade-in-fast;
   @include input;
 }
 .button {
   @include button;
+  @include fade-in-slow;
 }
 .backButton {
   @include button;
+  @include fade-in-slow;
   background-color: $white;
   color: black;
   border: 1px solid black;
@@ -20,4 +27,7 @@
     background-color: black;
     color: $white;
   }
+}
+.radioGroup {
+  @include fade-in-slow;
 }
