--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   height: $header;
-  transform: translateY($header);
   border-radius: 5px;
   z-index: 1000;
   width: 100%;
@@ -12,12 +11,16 @@
   box-shadow: 0 4px 18px 0px rgba(61, 97, 150, 0.12),
     0 7px 10px -5px rgba(95, 100, 136, 0.15);
   position: fixed;
+  transition: transform 500ms;
   top: 0;
   &.unfix {
-    background-color: $white;
+    transform: translateY(0);
   }
-  @media (min-width: 1200px) {
-    max-width: 1200px;
+  &.fix {
+    transform: translateY(55px);
+  }
+  @media (min-width: 1080px) {
+    max-width: 1080px;
   }
 }
 .linkWrapper {
