--- a/components/Header/LoginHeader.module.scss
+++ b/components/Header/LoginHeader.module.scss
@@ -7,7 +7,7 @@
   border-radius: 5px;
   z-index: 1000;
   width: 100%;
-  background-color: transparent;
+  background-color: $white;
   position: fixed;
   top: 0;
   &.white {
@@ -24,7 +24,10 @@
   align-content: center;
   p {
     margin: 0;
-    font-size: $smallFont;
+    font-size: $sm;
     color: $navy;
   }
+}
+.link {
+  @include textLink;
 }
