--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,17 +1,21 @@
 .container {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 10px;
   width: 100%;
 }
 .section {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding-top: 200px;
+  padding: 200px 0;
+  @media (min-width: 600px) {
+    align-items: flex-start;
+    width: 75%;
+  }
 }
 @media (max-width: 600px) {
   .grid {
