--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,7 +4,8 @@ $header: 60px;
 $mediumFont: 40px;
 $smallFont: 20px;
 $navy: #00001a;
-$blue: #96c7dc;
+$blue: #26a0a8;
+$darkblue: rgb(75, 100, 111);
 $xs: 10px;
 $sm: 16px;
 $md: 26px;
@@ -14,12 +15,9 @@ $xxl: 42px;
 
 @mixin input {
   border: none;
-  border-bottom: 1px solid #000000;
   background-color: #ffff;
   width: 340px;
   margin: $xs 0 !important;
-  box-shadow: 0 4px 18px 0px rgba(177, 191, 212, 0.12),
-    0 3px 4px -2px rgba(175, 177, 199, 0.15);
 }
 @mixin button {
   background-color: #000000;
@@ -33,7 +31,6 @@ $xxl: 42px;
   text-decoration: none;
   letter-spacing: 0.15em;
   text-align: center;
-  align-self: center;
   width: 100px;
   height: $xxl;
   margin: $sm;
@@ -58,4 +55,46 @@ $xxl: 42px;
 @mixin error {
   font-size: $smallFont;
   color: rgb(91, 21, 21);
+}
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@mixin fade-in-fast {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 300ms;
+}
+@mixin fade-in-slow {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 600ms;
+}
+@mixin textLink {
+  color: $darkblue;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.4s ease-in-out 0s;
+  }
+  &:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+  }
 }
