--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -31,3 +31,18 @@
 .radioGroup {
   @include fade-in-slow;
 }
+.modal {
+  @include modal;
+}
+.paper {
+  border: none;
+  @include fade-in-fast;
+  @include animation;
+  outline: none;
+  background-color: $white;
+  width: 70%;
+  padding: 20px 20px;
+  @media (min-width: 900px) {
+    width: 40%;
+  }
+}
