--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 10px;
   width: 100%;
 }
 .section {
@@ -14,7 +13,7 @@
   padding: 200px 0;
   @media (min-width: 600px) {
     align-items: flex-start;
-    width: 75%;
+    // width: 75%;
   }
 }
 @media (max-width: 600px) {
