--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,8 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  padding: 0 20px;
+  max-width: 1366px;
+  margin: auto;
   font-family: Fjalla One, Open Sans, -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
@@ -12,7 +13,8 @@ a {
   text-decoration: none;
 }
 p {
-  letter-spacing: 1px;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 h1 {
   letter-spacing: 2px;
