--- a/components/Header/LoginHeader.module.scss
+++ b/components/Header/LoginHeader.module.scss
@@ -10,20 +10,17 @@
   background-color: $white;
   position: fixed;
   top: 0;
-  &.white {
-    background-color: $white;
-  }
-  @media (min-width: 1200px) {
-    max-width: 1200px;
+  @media (min-width: 1080px) {
+    max-width: 1286px;
   }
 }
 .linkWrapper {
-  width: 90%;
+  width: 100%;
+  margin: 0 10px;
   display: flex;
   justify-content: flex-end;
   align-content: center;
   p {
-    margin: 0;
     font-size: $sm;
     color: $navy;
   }
