--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -17,7 +17,8 @@ $xxl: 42px;
   border: none;
   background-color: #ffff;
   width: 340px;
-  margin: $xs 0 !important;
+  height: $xxl;
+  margin: $sm 0 !important;
 }
 @mixin button {
   background-color: #000000;
@@ -93,6 +94,21 @@ $xxl: 42px;
   animation-name: anime;
   animation-duration: 500ms;
   animation-direction: reverse;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@mixin pulse {
+  animation: pulse 1s infinite;
+  animation-timing-function: linear;
 }
 @mixin textLink {
   color: $darkblue;
