--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -2,41 +2,40 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 200px 0;
   @media (min-width: 600px) {
-    min-width: 600px;
+    width: 100%;
   }
 }
+
 .input {
   @include fade-in-fast;
   @include input;
-  fieldset {
-    border-radius: 30px !important;
+  padding: 0 40px;
+  border: 1px solid $blue;
+  height: 60px;
+  border-radius: 30px;
+  &:focus {
+    outline: none;
   }
 }
 .errorMessage {
   @include error;
 }
-.countryInput {
-  @include fade-in-fast;
-  @include input;
-  border: 1px solid rgb(194, 188, 188);
-  height: 60px;
-  border-radius: 3px;
-  &:hover {
-    border: 1px solid rgb(0, 0, 0.87);
-  }
-}
-.buttonWrapper {
-  display: flex;
-  justify-content: space-between;
-}
+
 .button {
   @include button;
   @include fade-in-slow;
   margin-top: $lg;
-  border-radius: 40px !important;
+  height: 60px;
+  border-radius: 40px;
   &.disabled {
     background-color: grey;
     &:hover {
@@ -104,8 +103,9 @@
     @include pulse;
   }
 }
-.radioLabel {
+.label {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
