--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -27,31 +27,31 @@ $breakpointLg: 1080px;
   }
 }
 @mixin button {
-  background-color: #000000;
+  background-color: $white;
+
   border-radius: 3px;
-  color: white;
   font-family: Fjalla One, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: $sm;
   border: none;
   text-transform: uppercase;
   text-decoration: none;
-  letter-spacing: 0.15em;
-  width: 110px;
-  height: $xxl;
+  width: 180px;
+  height: 60px;
   margin: $sm 0;
+  border: 1px solid #000000;
 
   &:hover {
-    background-color: #ffffff;
+    background-color: $blue;
     cursor: pointer;
-    color: #000000;
+    color: $white;
     transition: 300ms;
-    border: 1px solid #000000;
+    border: none;
   }
   &:active {
-    background-color: #ffffff;
+    background-color: $blue;
     cursor: pointer;
-    color: #000000;
+    color: $white;
     transition: 300ms;
     outline: none;
     border: 1px solid #000000;
@@ -59,8 +59,10 @@ $breakpointLg: 1080px;
 }
 
 @mixin error {
-  font-size: $smallFont;
-  color: rgb(91, 21, 21);
+  font-size: 16px;
+  color: rgb(192, 37, 37);
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 @keyframes fadeInOpacity {
   0% {
