--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -7,8 +7,7 @@
   z-index: 1000;
   width: 100%;
   background-color: $blue;
-  box-shadow: 0 4px 18px 0px rgba(61, 97, 150, 0.12),
-    0 7px 10px -5px rgba(95, 100, 136, 0.15);
+  box-shadow: $boxShadow;
   position: fixed;
   transition: transform 500ms;
   top: 0;
@@ -38,7 +37,7 @@
     flex-grow: 1;
   }
   p {
-    margin: 0;
+    margin-right: 75px;
     text-align: center;
     width: 100%;
     font-size: $smallFont;
