--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -19,6 +19,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  @media (min-width: $breakpointMd) {
+    border-radius: 50px;
+    box-shadow: $boxShadow;
+    padding: $xxl $xxl;
+  }
 }
 .input {
   @include fade-in-fast;
