--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-width: 1350px;
 }
 .section {
   display: flex;
