--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,7 +6,8 @@ $mediumFont: 40px;
 $smallFont: 20px;
 $navy: #00001a;
 $blue: #26a0a8;
-$darkblue: rgb(75, 100, 111);
+$darkblue: rgb(91, 121, 134);
+$xxs: 5px;
 $xs: 10px;
 $sm: 16px;
 $md: 26px;
@@ -17,6 +18,10 @@ $breakpointSm: 370px;
 $breakpointMd: 760px;
 $breakpointLg: 1080px;
 $boxShadow: 0 22px 45px 0 rgba(0, 0, 0, 0.11);
+$Paragraph: Fjalla One, Roboto, -apple-system, BlinkMacSystemFont, Segoe UI,
+  Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+$headerFont: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu,
+  Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
 @mixin input {
   border: none;
