--- a/components/Header/LoginHeader.module.scss
+++ b/components/Header/LoginHeader.module.scss
@@ -7,7 +7,7 @@
   border-radius: 5px;
   z-index: 1000;
   width: 100%;
-  background-color: $white;
+  background-color: #18191a;
   position: fixed;
   top: 0;
   @media (min-width: $breakpointLg) {
@@ -22,7 +22,6 @@
   align-content: center;
   p {
     font-size: $sm;
-    color: $navy;
   }
 }
 .link {
