--- a/components/InfoModal/InfoModal.module.scss
+++ b/components/InfoModal/InfoModal.module.scss
@@ -24,7 +24,7 @@
 }
 
 .card {
-  background-color: $white;
+  background-color: #343639;
   border-radius: 5px;
   padding: 0 10px;
   position: fixed;
