--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,14 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 1350px;
+  // max-width: 1350px;
 }
 .section {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 200px 0;
-  @media (min-width: 600px) {
+  @media (min-width: 700px) {
     // align-items: flex-start;
     width: 100%;
   }
