--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,6 +6,7 @@ $mediumFont: 40px;
 $smallFont: 20px;
 $navy: #00001a;
 $blue: #3a3d41;
+$light: #8a9099;
 $darkblue: #5a5f66;
 $xxs: 5px;
 $xs: 10px;
@@ -151,7 +152,7 @@ $headerFont: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu
   animation-timing-function: linear;
 }
 @mixin textLink {
-  color: $darkblue;
+  color: $light;
   position: relative;
   &::before {
     content: "";
@@ -160,7 +161,7 @@ $headerFont: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #000;
+    background-color: $light;
     visibility: hidden;
     transform: scaleX(0);
     transition: all 0.4s ease-in-out 0s;
