--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@ a {
 p {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    color: #e4e6eb;
+  color: #e4e6eb;
 }
 h1 {
   letter-spacing: 2px;
@@ -30,4 +30,10 @@ h2 {
 }
 * {
   box-sizing: border-box;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  box-shadow: 0 0 0 30px #828891 inset;
 }
