--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -53,7 +53,7 @@ $headerFont: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu
   }
 }
 @mixin button {
-  background-color: #e4e6eb;
+  background-color: #51555b;
   font-family: Fjalla One, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: $sm;
@@ -69,7 +69,7 @@ $headerFont: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu
   &:hover {
     background-color: $darkblue;
     cursor: pointer;
-    color: $white;
+    color: #c2ccda;
     transition: 300ms;
     border: none;
   }
